# OfflineRLTutorial

./: README.md  pyproject.toml
offline_rl/: env.py  nn.py  plot.py  utils.py
offline_rl/algorithm/: conservative_q_iter.py  fitted_q_iter.py  tabular_q_iter.py
offline_rl/experiments/: experiment1.py  experiment2.py  experiment3_1.py  experiment3_2.py  parameters.py  prepare.py
