[tool.poetry]
name = "offlinerltutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.11b1"
mypy = "^0.910"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
